--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,4 @@
+/*=== Navigation ===*/
 body {
     font-family: Arial,sans-serif;
     margin: 0;
@@ -41,6 +42,8 @@ nav a {
     border-radius: 5px;
 }
 
+/*=== Acceuil ===*/
+
 .michel {
        display: flex;
     flex-wrap: wrap;
@@ -52,15 +55,18 @@ nav a {
 .blue {
      width: 300px;
     margin: 20px;
-    background: white;
+    background: black;
     padding: 20px;
     border-radius: 10px;
-    color: black;
+    color: white;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    
 }
 img{
     width: 50%;
 }
+
+/*=== Contact ===*/
 
 .luzolo {
     background-image: url(IMG_4977.JPG);
